--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:9.0.0-SNAPSHOT'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -32,9 +36,7 @@ clean.dependsOn customClean
 repositories {
     mavenCentral()
 }
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-}
+
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
