--- a/presentation_layer/build.gradle
+++ b/presentation_layer/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'com.jakewharton.hugo'
 
 android {
     compileSdkVersion 26
-
-
 
     defaultConfig {
         applicationId "sample.jeff.com.presentation"
@@ -29,6 +31,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':domain_layer')
+    implementation project(':data_layer')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
