--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -1,113 +1,55 @@
 ext {
-  versions = [
-          support       : "25.3.1",
-          firebase      : '11.8.0',
-          okHttp        : "3.8.1",
-          retrofit      : '2.3.0',
-          rxJava2       : '2.1.1',
-          rxAndroid2    : '2.0.1',
-          espresso      : '2.2.2',
-          espressoRunner: '0.5',
-          powerMock     : '1.6.6',
-          hamcrest      : '1.3',
-          restMock      : '0.2.1',
-          dagger        : '2.11',
-          butterKnife   : '8.6.0',
-          chuck         : '1.0.4',
-          gson          : '2.8.1',
-          glide         : '3.8.0',
-          timber        : '4.5.1',
-          tSpoon        : '1.0.1',
-          parcler       : '1.1.9',
-          stetho        : '1.5.0',
-          calligraphy   : '2.3.0',
-  ]
+    versions = [
+            support: "27.1.0"
+    ]
 
-  supportDeps = [
-          appcompatV7           : "com.android.support:appcompat-v7:$versions.support",
-          design                : "com.android.support:design:$versions.support",
-          cardView              : "com.android.support:cardview-v7:$versions.support",
-          vectorDrawableSupport : "com.android.support:support-vector-drawable:$versions.support",
-          animatedVectorDrawable: "com.android.support:animated-vector-drawable:$versions.support",
-          palette               : "com.android.support:palette-v7:$versions.support"
-  ]
+    presentationDependencies = [
+            //SUPPORT LIBRARIES
+            appCompatv7             : "com.android.support:appcompat-v7:$versions.support",
+            design                  : "com.android.support:design:$versions.support",
+            cardView                : "com.android.support:cardview-v7:$versions.support",
+            vectorDrawableSupport   : "com.android.support:support-vector-drawable:$versions.support",
+            animatedVectorDrawable  : "com.android.support:animated-vector-drawable:$versions.support",
+            palette                 : "com.android.support:palette-v7:$versions.support",
+            kotlinStdlib            : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
+            kotlinReflect           : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
+            kotlinStdlibJdk         : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
 
-  rxJava = [
-          rxJava2   : "io.reactivex.rxjava2:rxjava:$versions.rxJava2",
-          rxAndroid2: "io.reactivex.rxjava2:rxandroid:$versions.rxAndroid2"
-  ]
+            // Retrofit
+            retrofit                : "com.squareup.retrofit2:retrofit:2.4.0",
+            converterMoshi          : "com.squareup.retrofit2:converter-moshi:2.3.0",
 
-  retrofit = [
-          retrofit     : "com.squareup.retrofit2:retrofit:$versions.retrofit",
-          rxAdapter    : "com.squareup.retrofit2:adapter-rxjava:$versions.retrofit",
-          rxAdapter2   : "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit",
-          gsonConverter: "com.squareup.retrofit2:converter-gson:$versions.retrofit",
-  ]
+            // Coroutines
+            kotlinxCoroutinesCore   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3",
+            kotlinxCoroutinesAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.19.3",
 
-  okHttp = [
-          logger: "com.squareup.okhttp3:logging-interceptor:$versions.okHttp",
-          okhttp: "com.squareup.okhttp3:okhttp:$versions.okHttp"
-  ]
+            // Coroutines - Retrofit extention
+            kotlinCoroutinesRetrofit: "ru.gildor.coroutines:kotlin-coroutines-retrofit:0.8.2",
 
-  fireBase = [
-          firebaseMessaging: "com.google.firebase:firebase-messaging:$versions.firebase"
-  ]
+            //RX JAva
+            rxjava                  : "io.reactivex.rxjava2:rxjava:2.1.10",
+            rxandroid               : "io.reactivex.rxjava2:rxandroid:2.0.2",
+            adapterRxjava           : "com.squareup.retrofit2:adapter-rxjava:2.4.0",
 
+            //gson
+            gson                    : "com.google.code.gson:gson:2.8.2",
+            converterGson           : "com.squareup.retrofit2:converter-gson:2.4.0",
 
+            //okhttp
+            loggingInterceptor      : "com.squareup.okhttp3:logging-interceptor:3.10.0",
 
-  misc = [
-          multidex   : "com.android.support:multidex:1.0.1",
-          gson       : "com.google.code.gson:gson:$versions.gson",
-          timber     : "com.jakewharton.timber:timber:$versions.timber",
-          butterKnife: "com.jakewharton:butterknife:$versions.butterKnife",
-          dagger     : "com.google.dagger:dagger:$versions.dagger",
-          glide      : "com.github.bumptech.glide:glide:$versions.glide",
-          tSpoon     : "com.tspoon.traceur:traceur:$versions.tSpoon",
-          parcler    : "org.parceler:parceler-api:$versions.parcler",
-          stetho     : "com.facebook.stetho:stetho:$versions.stetho",
-          calligraphy: "uk.co.chrisjenx:calligraphy:$versions.calligraphy",
-  ]
+            //Timber
+            timber                  : "com.jakewharton.timber:timber:4.6.0",
 
-  annotationProcess = [
-          butterknife: "com.jakewharton:butterknife-compiler:$versions.butterKnife",
-          parcler    : "org.parceler:parceler:$versions.parcler",
-          dagger     : "com.google.dagger:dagger-compiler:$versions.dagger"
-  ]
+            //traceur
+            traceur                 : "com.tspoon.traceur:traceur:1.0.1",
 
-  mockito = [mockito: "org.mockito:mockito-core:2.8.9"]
-  junit = [junit: "junit:junit:4.12"]
-  restMock = [restMock: "com.github.andrzejchm.RESTMock:android:$versions.restMock"]
+            //multi dex
+            multidex                : "com.android.support:multidex:1.0.3",
 
-  unitTest = [
-          harcrestCore        : "org.hamcrest:hamcrest-core:$versions.hamcrest",
-          harmcrestLib        : "org.hamcrest:hamcrest-library:$versions.hamcrest",
-          hamcrestIntegration : "org.hamcrest:hamcrest-integration:$versions.hamcrest",
-          robolectric         : "org.robolectric:robolectric:3.2.2",
-          supportAnnotation   : "com.android.support:support-annotations:$versions.support",
-          restMock            : "com.github.andrzejchm.RESTMock:android:$versions.restMock",
-          easymock            : "org.easymock:easymock:3.4",
-          assertj             : "com.squareup.assertj:assertj-android:1.1.1",
-          powermockCore       : "org.powermock:powermock-core:$versions.powerMock",
-          powermockModuleJunit: "org.powermock:powermock-module-junit4:$versions.powerMock",
-          powermockApiEasymock: "org.powermock:powermock-api-easymock:$versions.powerMock"
-  ] + junit + mockito + restMock
+            calligraphy             : "uk.co.chrisjenx:calligraphy:2.3.0",
+    ]
 
-  androidTests = [
-          espressoCore   : "com.android.support.test.espresso:espresso-core:$versions.espresso",
-          espressoContrib: "com.android.support.test.espresso:espresso-contrib:$versions.espresso",
-          espressoIntents: "com.android.support.test.espresso:espresso-intents:$versions.espresso",
-          testRunner     : "com.android.support.test:runner:$versions.espressoRunner",
-          testRules      : "com.android.support.test:rules:$versions.espressoRunner",
-  ] + mockito + restMock
+    presentationDeps = presentationDependencies.values()
 
-  supportLibs = supportDeps.values()
-  networkLibs = retrofit.values() + okHttp.values()
-  rxJavaLibs = rxJava.values()
-  misc = misc.values()
-  unitTestLibs = unitTest.values()
-  androidTestsLibs = androidTests.values() + supportLibs
-  annotationProcessLibs = annotationProcess.values()
-  fireBaseCloudMessage = fireBase.values()
-  leakCannary = "com.squareup.leakcanary:leakcanary-android:1.5.1"
-  daggerCompiler = "com.google.dagger:dagger-compiler:$versions.dagger"
 }
