--- a/presentation_layer/build.gradle
+++ b/presentation_layer/build.gradle
@@ -6,7 +6,8 @@ apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'com.jakewharton.hugo'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
+    buildToolsVersion '27.0.1'
 
     defaultConfig {
         applicationId "sample.jeff.com.presentation"
@@ -14,9 +15,16 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
+//        buildConfigField("String", "SERVER_URL", "\"${SERVER_URL}\"")
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
 
+
+
+    lintOptions {
+        disable 'RestrictedApi'
     }
 
     buildTypes {
@@ -26,17 +34,76 @@ android {
         }
     }
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/ECLIPSE_.SF'
+        exclude 'META-INF/ECLIPSE_.RSA'
+        pickFirst 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':domain_layer')
     implementation project(':data_layer')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation rootProject.ext.presentationDeps
+    //================================================
+
+    //Memory Leaks
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+
+    // Dagger 2
+    implementation 'com.google.dagger:dagger:2.14.1'
+    kapt 'com.google.dagger:dagger-compiler:2.14.1'
+    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
+
+
+    //butterknife
+    implementation "com.jakewharton:butterknife:8.8.1"
+    implementation "com.jakewharton:butterknife-compiler:8.8.1"
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+
+
+    // Sherlock -> Report crashes in notification, helpful for testers/testing
+    debugImplementation('com.github.ajitsing:sherlock:1.0.2@aar') {
+        transitive = true
+    }
+
+    releaseImplementation 'com.github.ajitsing:sherlock-no-op:1.0.2@aar'
+
+    // Chuck -> For API calls notification
+    debugImplementation "com.readystatesoftware.chuck:library:1.0.4"
+    releaseImplementation "com.readystatesoftware.chuck:library-no-op:1.0.4"
+
+
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    //parcler
+    implementation 'org.parceler:parceler-api:1.1.10'
+    annotationProcessor 'org.parceler:parceler:1.1.10'
+
+
+    //================================================
 }
 repositories {
     mavenCentral()
