--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -30,7 +30,7 @@ ext {
             //RX JAva
             rxjava                  : "io.reactivex.rxjava2:rxjava:2.1.10",
             rxandroid               : "io.reactivex.rxjava2:rxandroid:2.0.2",
-            adapterRxjava           : "com.squareup.retrofit2:adapter-rxjava:2.4.0",
+            adapterRxjava           : "com.squareup.retrofit2:adapter-rxjava2:2.4.0",
 
             //gson
             gson                    : "com.google.code.gson:gson:2.8.2",
