--- a/presentation_layer/build.gradle
+++ b/presentation_layer/build.gradle
@@ -17,7 +17,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
-//        buildConfigField("String", "SERVER_URL", "\"${SERVER_URL}\"")
+        buildConfigField("String", "SERVER_URL", "\"${SERVER_URL}\"")
 
     }
 
