--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ apply from: 'buildsystem/dependencies.gradle'
 
 buildscript {
     ext.kotlin_version = '1.2.30'
-    ext.kotlin_version = '1.2.21'
+    ext.anko_version = '0.10.4'
+
     repositories {
         google()
         jcenter()
