--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -23,6 +23,7 @@ ext {
             rxIdler      : '0.9.0',
             glide        : '4.6.1',
             truth        : '0.39',
+            stetho       : '1.5.0',
             calligraphy  : '2.3.0'
     ]
 
@@ -49,6 +50,21 @@ ext {
             kotlinStdlib   : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
             kotlinReflect  : "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
             kotlinStdlibJdk: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+    ]
+
+    anko = [
+            // Anko Commons
+            commons        : "org.jetbrains.anko:anko-commons:$anko_version",
+
+            // Anko Layouts
+            ankoSdk        : "org.jetbrains.anko:anko-sdk25:$anko_version", // sdk15, sdk19, sdk21, sdk23 are also available
+            ankoAppCompat  : "org.jetbrains.anko:anko-appcompat-v7:$anko_version",
+
+            // Coroutine listeners for Anko Layouts
+            ankoSdkCR      : "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version",
+            ankoAppCompatCR: "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version",
+            ankoDesign     : "org.jetbrains.anko:anko-design:$anko_version"
+
     ]
 
     retrofit = [
@@ -86,6 +102,10 @@ ext {
     gson = [
             gson         : "com.google.code.gson:gson:$versions.gson",
             converterGson: "com.squareup.retrofit2:converter-gson:$versions.gsonConverter",
+    ]
+
+    stetho = [
+            stetho: "com.facebook.stetho:stetho:$versions.stetho"
     ]
 
     unitTest = [
@@ -133,8 +153,10 @@ ext {
     fontCalligraphy = calligraphy.values()
     gsonLibs = gson.values()
     kotlinLibs = kotlinDeps.values()
+    ankoLibs = anko.values()
     networkLibs = retrofit.values() + okHttp.values() + moshi.values()
     rxJavaLibs = rxJava.values()
+    stethoLibs = stetho.values()
     otherLibs = [timber.values(),
                  dagger.daggerLibrary,
                  dagger.daggerAndroid,
